# triagemate

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  agents-cli-manifest.yaml  demo.py  pyproject.toml  threat_model.md
mcp_server/: __init__.py  knowledge_base.json  server.py
skills/red-flag-detection/: SKILL.md
skills/symptom-analysis/: SKILL.md
tests/: test_guardrails.py  test_mcp_tools.py
triage_agent/: __init__.py  agent.py  audit.py  config.py  guardrails.py  schemas.py  skills.py
