[project]
name = "triagemate"
version = "0.1.0"
description = "TriageMate — an AI triage copilot for nurses, built with Google ADK, MCP, and safety guardrails."
requires-python = ">=3.11,<3.14"
dependencies = [
    "google-adk>=2.0.0,<3.0.0",
    "mcp>=1.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.4.6",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line too long — handled case by case

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["triage_agent", "mcp_server"]
